<resources>
    <string-array name="dice_array">
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D20</item>
    </string-array>
    <string-array name="count_dice_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="app_name">DD_App</string>
    <string name="choose_dice">Выбранная кость</string>
    <string name="choose_numb_dice">Колличество костей</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="prompt_account">Аккаунт</string>
    <string name="prompt_password">Пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="game_name">Имя игры</string>
    <string name="world_name">Имя мира</string>
    <string name="game_password">Пароль игры</string>
    <string name="new_password">Новый пароль</string>
    <string name="action_sign_in_short">Go!</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="dell_account">Удалить аккаунт</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="upd_password">Обновить пароль</string>
    <string name="DD_app_ver">Dungeons and Dragons App (ver 1.0)</string>
    <string name="sure_del_account">Уверены, что хотите удалить аккаунт?</string>
    <string name="change_password">Смена пароля</string>
    <string name="join_game">Присоединиться к игре</string>
    <string name="dice_game">Игровые кости</string>
    <string name="new_game">Создание новой игры</string>
    <string name="change_password_btn">Подтвердить</string>
    <string name="join_game_btn">Присоединиться</string>
    <string name="enter_game_btn">Войти в игру</string>
    <string name="leave_game_btn">Покинуть игру навсегда</string>
    <string name="expel_game_btn">Выгнать игрока навсегда</string>
    <string name="see_gamer_char_btn">Посмотреть персонажей игрока</string>
    <string name="sure_expel_gamer_btn">Вы уверены, что хотите выгнать игрока навсегда?</string>
    <string name="exit_game">Выйти из игры</string>
    <string name="sure_leave_game_btn">Вы точно хотите покинуть игру навсегда?</string>
    <string name="sure_del_character_btn">Вы точно удалить этого персонажа?</string>
    <string name="sure_del_game_btn">Вы точно хотите удалить игру навсегда?</string>
    <string name="del_game_btn">Удалить игру</string>
    <string name="create_game_btn">Создать новую игру</string>
    <string name="go_dice_btn">Бросить кости</string>
    <string name="no_characters">У вас ещё нет ни одного персонажа</string>
    <string name="no_characters_game">У вас ещё нет ни одного персонажа в этой игре</string>
    <string name="no_games">У вас ещё нет ни одной игры</string>
    <string name="no_gamers">В Вашей игре ещё нет ни одного игрока</string>
    <string name="no_spell">У Вашего класса нет заклинаний</string>
    <string name="add_games">Добавить новую игру</string>
    <string name="hp_character">Здоровье: </string>
    <string name="power_character">Сила: </string>
    <string name="agility_character">Ловкость: </string>
    <string name="bodyType_character">Телосложение: </string>
    <string name="intellect_character">Интеллект: </string>
    <string name="wisdom_character">Мудрость: </string>
    <string name="charisma_character">Харизма: </string>
    <string name="dmg_buff_characters">Баффы/дебаффы урона: </string>
    <string name="hp_buff_characters">Баффы/дебаффы здоровья: </string>
    <string name="notes_characters">Заметки: </string>
    <string name="name_game">Имя: </string>
    <string name="name_spell">Название: </string>
    <string name="name_world">Мир: </string>
    <string name="name_game_master">Мастер игры: </string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="absent">отсутствуют</string>
    <string name="present">присутствуют</string>
    <string name="log_in">Войти</string>
    <string name="title_game">Игры</string>
    <string name="title_char">Персонажи</string>
    <string name="title_acc">Аккаунт</string>
    <string name="title_cubes">Кости</string>
    <string name="title_nav_game">Игра</string>
    <string name="title_gamers">Игроки</string>
    <string name="race">Раса</string>
    <string name="var_race">Подраса</string>
    <string name="classes">Класс</string>
    <string name="weapon">Оружие</string>
    <string name="armor">Броня</string>
    <string name="spell_char">Посмотреть заклинания</string>
    <string name="redact_char">Редактировать персонажа</string>
    <string name="dell_char">Удалить персонажа</string>
    <string name="incr_char">Повышение характеристик: </string>
    <string name="worldview">Мировоззрение: </string>
    <string name="size">Размер: </string>
    <string name="speed">Скорость: </string>
    <string name="foot">футов</string>
    <string name="description">Описание: </string>
    <string name="add_feat">Доп. умение: </string>
    <string name="master_bonus">Бонус мастерства: </string>
    <string name="numb_spell">Кол-во заклинаний: </string>
    <string name="price">Цена: </string>
    <string name="gold_coins">зм.</string>
    <string name="damage">Урон: </string>
    <string name="weight">Вес: </string>
    <string name="weight_">фнт.</string>
    <string name="steal_hindr">Помеха скрытности: </string>
    <string name="actions_char">Действия</string>
    <string name="duration">Длительность: </string>
    <string name="sec">сек.</string>
    <string name="distance">Дальность: </string>
    <string name="create_character">Создание персонажа</string>
    <string name="name_character">Имя персонажа</string>
    <string name="save_character">Сохранить персонажа</string>
    <string name="hp">Здоровье</string>
    <string name="body_type">Телосложение</string>
    <string name="agility">Ловкость</string>
    <string name="power">Сила</string>
    <string name="intellect">Интеллект</string>
    <string name="charisma">Харизма</string>
    <string name="wisdom">Мудрость</string>
    <string name="notes_character">Заметки</string>
    <string name="url_character">Ссылка на аватар персонажа</string>
    <string name="more_class">Больше о классе</string>
    <string name="more_race">Больше о расе</string>
    <string name="more_var_race">Больше о подрасе</string>
    <string name="more_weap">Больше об оружии</string>
    <string name="more_arm">Больше об броне</string>
    <string name="absent_">отсутствует</string>
    <string name="present_">присутствует</string>
    <string name="hp_hint">hp</string>
</resources>